<resources>
    <string name="app_name">Bera reclama</string>
    <!--    Main menu-->
    <string name="iv_logo_description">Berazategui logo\n</string>
    <string name="it_publish_title">Publicar</string>
    <string name="it_map_title">Mapa</string>
    <string name="it_settings_title">Ajustes</string>
    <string name="it_logOut_title">Cerrar sesión</string>
    <!--    Login activity-->
    <string name="et_user_hint">Usuario</string>
    <string name="et_password_hint">Contraseña</string>
    <string name="btn_login_title">Igresar</string>
    <string name="btn_register_title">Registrarse</string>
    <string name="iv_login_description">login image</string>
    <string name="btn_loginGoogle_title">Ingresar con Google</string>
    <string name="default_web_client_id">182611265235-1dtfarmk7na6creiivm540d15d8b9vv5.apps.googleusercontent.com</string>
    <!--    Register activity-->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_welcome">Bienvenido</string>
    <string name="iv_photoUser_title">User profile photo</string>
    <string name="btn_addPhoto_title">Foto</string>
    <string name="btn_deletePhoto_title">Borrar</string>
    <string name="et_email_hint">Email</string>
    <string name="et_passwordRepeat_hint">Repetir contraseña</string>
    <!--    Map activity-->
    <string name="title_activity_maps">MapsActivity</string>
    <string name="toolbar_map_title">Mapa de reclamos</string>
    <string name="btn_search_title">Buscar</string>
    <string name="et_location_hint">Escriba la direccion</string>
    <!--    Post activity-->
    <string name="toolbar_post_title">Nuevo reclamo</string>
    <string-array name="sp_reclaims_name">
        <item>bache</item>
        <item>basura acumulada</item>
        <item>iluminación</item>
        <item>otros</item>
    </string-array>
    <string name="et_date_hint">Seleccionar fecha</string>
    <string name="iv_image_description">Imagen de la publcacion</string>
    <string name="btn_camera_title">Tomar foto</string>
    <string name="btn_gallery_title">Elegir imagen de galería</string>
    <string name="btn_publish_title">Publicar</string>
    <!--    Reclaim list activity-->
    <string name="tv_postList_title">Lista de reclamos</string>
    <string name="tv_fecha_title">Fecha</string>
    <string name="tv_tipo_title">Tipo</string>
    <string name="tv_address_title">Direccion</string>
    <string name="iv_itemPost_description">Tumball post</string>
    <string name="tv_status_title">Estado</string>
    <string name="iv_btnReject_description">Button for reject post.</string>
    <string name="iv_btnApproved">Button for aprove post.</string>
    <!--    Reclaim list detail activity-->
    <string name="ib_btnEditPost_title">Button for edit post attributes</string>
    <string name="ib_btnDownload_description">Button for download post image</string>
    <string name="ib_btnLocation_description">Button for locate post marker in map.</string>
    <string name="tv_postListDetail_title">Detalle del reclamo</string>
</resources>