<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/iv_profilePhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iv_login_description"
        android:scaleType="centerCrop"
        android:src="@drawable/user"
        app:shapeAppearanceOverlay="@style/OvalImageStyle" />

    <EditText
        android:id="@+id/et_userEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/et_user_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password_hint"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_loginUser"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#1AD105"
            android:text="@string/btn_login_title"
            android:textColor="#FFFFFF" />
        <Button
            android:id="@+id/btn_register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#3F6BF1"
            android:text="@string/btn_register_title"
            android:textColor="#FFFFFF"
            app:iconPadding="2dp" />
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_loginGoogle_title"
        android:textSize="16sp" />
</LinearLayout>