<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/images_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="70dp">
                <ImageView
                    android:id="@+id/iv_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/OvalImageStyle"
                    android:contentDescription="@string/iv_photoUser_title"
                    app:srcCompat="@drawable/user" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/btn_addPhoto_title" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_remove_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#DE0202"
                    android:text="@string/btn_deletePhoto_title" />
            </LinearLayout>

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />
        <EditText
            android:id="@+id/et_userEmail"
            android:layout_width="400dp"
            android:layout_height="56dp"
            android:hint="@string/et_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password_hint"
            android:layout_width="400dp"
            android:layout_height="56dp"
            android:hint="@string/et_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_passwordRepeat_hint"
            android:layout_width="400dp"
            android:layout_height="56dp"
            android:hint="@string/et_passwordRepeat_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_registerUser"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_register_title"
            android:backgroundTint="#3F6BF1"/>

</LinearLayout>